cargo-features = ["strip"]

[workspace]
members = [
  "./crates/alloc",
  "./packages/argon2",
  "./packages/bcrypt",
  "./packages/crc32",
  "./packages/deno-lint",
  "./packages/jieba",
  "./packages/xxhash",
]

[profile.release]
codegen-units = 1
lto = true
overflow-checks = false
strip = 'symbols'

[patch.crates-io]
napi = { git = "https://github.com/napi-rs/napi-rs", branch = "remove-thread-local" }
napi-derive = { git = "https://github.com/napi-rs/napi-rs", branch = "remove-thread-local" }
