cargo-features = ["strip"]

[workspace]
members = [
  "./crates/alloc",
  "./packages/argon2",
  "./packages/bcrypt",
  "./packages/crc32",
  "./packages/deno-lint",
  "./packages/jieba",
  "./packages/xxhash",
]

[profile.release]
codegen-units = 4
lto = true
overflow-checks = false
strip = 'symbols'
