[workspace]
members  = ["./crates/alloc", "./packages/argon2", "./packages/bcrypt", "./packages/crc32", "./packages/jieba", "./packages/jsonwebtoken", "./packages/xxhash"]
resolver = "2"

  [workspace.dependencies]
  argon2       = { version = "0.5", features = ["rand"] }
  base64       = { version = "0.22" }
  bcrypt       = "0.15"
  blowfish     = { version = "0.9", features = ["bcrypt"] }
  crc32c       = { version = "0.6" }
  crc32fast    = { version = "1.4", features = ["nightly"] }
  getrandom    = "0.2"
  global_alloc = { path = "./crates/alloc" }
  indexmap     = { version = "2", features = ["serde"] }
  jieba-rs     = { version = "0.7", default-features = false, features = ["tfidf", "textrank"] }
  jsonwebtoken = { version = "9" }
  mimalloc     = "0.1"
  napi         = { version = "3.0.0-alpha", default-features = false, features = ["napi3"] }
  napi-build   = "2"
  napi-derive  = { version = "3.0.0-alpha", default-features = false, features = ["type-def"] }
  once_cell    = "1"
  quickcheck   = "1.0"
  rand_core    = { version = "0.6", features = ["getrandom"] }
  serde        = "1.0"
  serde_json   = "1.0"
  xxhash-rust  = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
[profile.release]
codegen-units   = 1
lto             = true
overflow-checks = false
strip           = 'symbols'
